@@ -1,0 +1,8 @@
+CORE
+main.c
+--model-argc-argv 3 --dump-c --harness
+^EXIT=0$
+^SIGNAL=0$
+Adding up to 3 command line arguments
+--
+^warning: ignoring
