@@ -18,6 +18,7 @@ void dump_c(
   const goto_functionst &src,
   const bool use_system_headers,
   const bool use_all_headers,
+  const bool include_harness,
   const namespacet &ns,
   std::ostream &out);
 
@@ -25,6 +26,7 @@ void dump_cpp(
   const goto_functionst &src,
   const bool use_system_headers,
   const bool use_all_headers,
+  const bool include_harness,
   const namespacet &ns,
   std::ostream &out);
 
